Update instructions around JDK24 to avoid getting a warning